Version 0.10.0~dev

	* Switch the build system to setuptools
	* Rewrite man pages in RST (better github/gitlab support)

Version 0.9.0 Released on 2014/09/17

	* Drop Action._execute_worker in favor of Action._execute_current_worker.
	* Call command callback even if there is no output data read from standard
	  outputs, refs: #6583.
	* Compute progress in bmx worker, closes: #6583.
	* Remove memory_limit from Command.run arguments.
	* Let the worker specify the command kill timeout.
	* Increase kill timeout limit to 5 hours for the bmx worker.
	* Support text and timecode burning through drawtext method in
	  ffmpeg worker, refs: #6582.
	* Support text and timecode burning in transcode action, refs: #6582.
	* Support text and timecode burning in toolbox2-transcode, closes: #6582.
	* Make FFmpegWorker._get_audio_layout_mapping a private method.
	* Use _get_audio_layout_mapping in mux_gxf method in ffmpeg worker.
	* Support minimum audio stream requirements in ffmpeg worker.
	* Add audio_min_streams option to transcode action.
	* Add audio_min_streams option to toolbox2-transcode.
	* Use _get_audio_layout_mapping in mux_mov method in ffmpeg worker.
	* Do not force audio layout in mux_(flv|mp4|mpegps|mxf) methods in ffmpeg worker.
	* Add audio_channels_per_stream option to transcode action.
	* Add audio_channels_per_stream option to toolbox2-transcode.
	* Add unicode errors ignore to the json parse of ffprobe.
	* Add support for prores.
	* Support relative paths as input in toolbox2-transcode.
	* Use the thumbnail filter to extract thumbnails.
	* Force -d10_channelcount 8 for IMX if the option is available
	* Add a special PCM transcode to force 2x4 -> 1x8 audio mapping
	* Try to detect the aspect ratio for SD videos
	* Add the "copy" parameter for the aspect_ratio
	* Do not hardcode the list of HD resolutions anymore
	* Various fix and improvements.

Version 0.8.1 Released on 2013/01/16

	* Rename transcode_mpeg4 method to transcode_mp4 in ffmpeg worker,