@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 8),
                python-all (>= 2.6.6-3~),
                python-setuptools,
                python-docutils
+X-Python-Version: >= 2.6
 Standards-Version: 3.9.5
 
 Package: python-toolbox2
