@@ -1,6 +1,7 @@
 python-toolbox2 (0.10.0~dev-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Run the test suite at build time
 
  -- Nicolas Delvaux <nicolas.delvaux@arkena.com>  Tue, 27 Jan 2015 10:26:09 +0100
 
